Final cleanup before publish

--- a/docs/spi_avalon_fpga/TeX_files/books.tex
+++ b/docs/spi_avalon_fpga/TeX_files/books.tex
@@ -1,5 +1,7 @@
 \section{FPGA and Verilog Books}
 
+Notes on books which might be useful to an FPGA beginner.
+
 \subsection{Hobbyist FPGA Books}
 
 "Designing Video Game Hardware in Verilog"
