--- a/docs/spi_avalon_fpga/TeX_files/introduction.tex
+++ b/docs/spi_avalon_fpga/TeX_files/introduction.tex
@@ -2,7 +2,7 @@
 %\pagenumbering{gobble}
 
 This is the ``Golden Age'' of SBCs (Single Board Computers) and microcontroller boards.
-Walk into your favorite brick-and-mortar bookstore (not many remain), 
+Walk into your favorite brick-and-mortar bookstore (if you can find one), 
 and check out the magazine shelf.  You will find several magazines, or ``book-a-zines''
 dedicated to ``Arduino'' or ``Raspberry Pi''.  On the bookshelves you find a few books on Arduino and RPi, maybe even one for BeagleBone.
 
@@ -26,8 +26,8 @@ There are a ton of resources online, and dozens of books and magazines on SBCs w
 The ARRL store sells several SBC themed books as well.  Do a search for FPGA.  Nothing!
 
 I think it is fair to say that FPGA technology has not made it very far into the ranks of hobbyists.
-Amateur radio operators have certainly been pioneers in this, with numerous ``Software Defined Radio''
-projects going back to the era when the devices were really expensive.  FPGA is an amazing technology, a sort of ``3D printer of digital electronics''.  Perhaps there are other applications of FPGA within the amateur radio community in addition to SDR which can be explored?
+Amateur radio experimenters have certainly been pioneers in FPGA, with numerous ``Software Defined Radio''
+projects going back to the era when the devices were really expensive.  FPGA is an amazing technology, a sort of ``3D printer of digital electronics''.  Perhaps there are other applications of FPGA within the amateur radio world in addition to SDR which can be explored?
 
 I wanted to experiment with this FPGA stuff! The current crop of devices and boards has lowered the cost of entry.  This is my story of a first project in FPGA.  Hopefully it can be shown that FPGA projects are within reach, and other hams can be encouraged to try working with this fascinating technology.
 
@@ -44,7 +44,7 @@ FPGAs will almost certainly be used in combination with conventional ``hard'' co
 \section{Where to Start}
 
 When I began my FPGA quest, I was already familiar with the most common SBCs and microcontroller boards, the Arduino, the BeagleBone, and the Raspberry Pi.
-It a good thing to have some experience developing with an SBC before attempting to tackle FPGA.  In my case, I spent quite a bit of time developing several projects on the BeagleBone Black SBC.  Many of the skills learned working with SBCs will apply to FPGAs.
+It a good thing to have some experience developing with an SBC before attempting to tackle FPGA.  In my case, I spent quite a bit of time developing several projects on the BeagleBone Black.  Many of the skills learned working with SBCs will apply to FPGAs.
 
 One of the ways I went up the learning curve on SBCs was this lecture series by Bruce Land of Cornell University:
 
@@ -66,13 +66,13 @@ with the FPGA are similar.
 
 You will need to use a variety of resources to answer questions and solve problems as you go up the FPGA learning curve.
 It seemed to me that most of the effort required to learn FPGA is in handling a large quantity of details.
-You will need to spend a lot of hours absorbing this stuff.  I think that FPGAs are at least a little bit harder than working with SBCs.
+You will need to spend a lot of hours viewing videos, reading, and taking notes.  I think that FPGAs require at least a little more effort than working with SBCs.
 
-\section{A Most Significant Source of Learning: Vendor Web Site}
+\section{Your FPGA Manufacturer Web Site}
 
-You will need to get an account at your FPGA vendor's website.  I used an Intel based board, and the account was free.
+You will need to get an account at your FPGA manufacturer's website.  I used an Intel based board, and the account was free.
 On the Intel site, you will have access to large amounts of learning resources for FPGA.
-Be prepared to spend many hours watching videos and studying documentation, whatever vendor you have chosen.
+Be prepared to spend many hours watching videos and studying documentation, whatever FPGA you have chosen.
 Intel has good material, and you can learn a lot!  A recommended starting point is the video series ``Become an FPGA Designer in 4 Hours''.
 The 4 hours part is perhaps a bit optimistic, but it will give you a good early acceleration:
 
