Final tweaks completed, publish!

--- a/docs/spi_avalon_fpga/TeX_files/books.tex
+++ b/docs/spi_avalon_fpga/TeX_files/books.tex
@@ -26,7 +26,9 @@ Simon Monk, 2017 McGraw-Hill Education
 
 Good coverage of beginning FPGA using the boards Elbert 2, Mojo, and Papilio.
 
+\begin{footnotesize}
 \url{https://www.amazon.com/Programming-FPGAs-Getting-Started-Verilog/dp/125964376X/ref=sr_1_1?keywords=fpga+monk&qid=1564448368&s=books&sr=1-1}
+\end{footnotesize}
 
 \subsection{Verilog}
 
@@ -36,16 +38,15 @@ Here are a couple of inexpensive books (< \$20) which will get you going:
 ``Designing Digital Systems with SystemVerilog''
 Brent E. Nelson, Brigham Young University
 
+\begin{footnotesize}
 \url{https://www.amazon.com/gp/product/1075968437/ref=ppx_yo_dt_b_asin_title_o00_s03?ie=UTF8&psc=1}
+\end{footnotesize}
 
 ``Exploring Digital Logic''
 George Self.
 
+\begin{footnotesize}
 \url{http://www.lulu.com/shop/george-self/exploring-digital-logic/paperback/product-22747579.html}
+\end{footnotesize}
 
-Free eBook by Intel:
-
-``FPGAs for Dummies''
-
-\url{https://plan.seek.intel.com/PSG_WW_NC_LPCD_FR_2018_FPGAforDummiesbook}
 
