--- a/docs/spi_avalon_fpga/TeX_files/introduction.tex
+++ b/docs/spi_avalon_fpga/TeX_files/introduction.tex
@@ -4,7 +4,7 @@
 This is the ``Golden Age'' of SBCs (Single Board Computers) and microcontroller boards.
 Walk into your favorite brick-and-mortar bookstore (if you can find one), 
 and check out the magazine shelf.  You will find several magazines, or ``book-a-zines''
-dedicated to ``Arduino'' or ``Raspberry Pi''.  On the bookshelves you find a few books on Arduino and RPi, maybe even one for BeagleBone.
+dedicated to ``Arduino'' or ``Raspberry Pi''.  On the bookshelves you will find a few books on Arduino and RPi, maybe even one for BeagleBone.
 
 Or look in the magazine ''Make'', or use their ``Makers’ Guide to Boards'':
 
@@ -19,11 +19,11 @@ Using the above webpage, you can select a ``Type'' of board from three categorie
 \end{itemize}
 
 While there are dozens of boards listed, there are only three shown for ``FPGA''.
-This list is not entirely accurate, as more FPGA boards o exist, however, it gives
+This list is not entirely accurate, as more FPGA boards do exist, however, it gives
 an idea of the relative scarcity of FPGA boards.
 
 There are a ton of resources online, and dozens of books and magazines on SBCs which you can find at the local bookstore.
-The ARRL store sells several SBC themed books as well.  Do a search for FPGA.  Nothing!
+The ARRL store sells several SBC themed books as well, but the web store shows none on FPGA.
 
 I think it is fair to say that FPGA technology has not made it very far into the ranks of hobbyists.
 Amateur radio experimenters have certainly been pioneers in FPGA, with numerous ``Software Defined Radio''
@@ -48,7 +48,9 @@ It a good thing to have some experience developing with an SBC before attempting
 
 One of the ways I went up the learning curve on SBCs was this lecture series by Bruce Land of Cornell University:
 
+\begin{footnotesize}
 \url{https://www.youtube.com/watch?v=FYy6JN0vpg0&list=PLKcjQ_UFkrd4z2qoFuJ1jtVhCSuxxCTpk}
+\end{footnotesize}
 
 This course uses a PIC32 microcontroller board.  However, the material in the lectures is generic enough to apply to any board which can be programmed in C.
 Even better, a second course covers FPGA!
@@ -76,7 +78,9 @@ Be prepared to spend many hours watching videos and studying documentation, what
 Intel has good material, and you can learn a lot!  A recommended starting point is the video series ``Become an FPGA Designer in 4 Hours''.
 The 4 hours part is perhaps a bit optimistic, but it will give you a good early acceleration:
 
-https://www.intel.com/content/www/us/en/programmable/support/training/course/odswbecome.html
+\begin{footnotesize}
+\url{https://www.intel.com/content/www/us/en/programmable/support/training/course/odswbecome.html}
+\end{footnotesize}
 
 \section{Github Repository for this Project}
 
