--- a/docs/spi_avalon_fpga/TeX_files/julia_lang.tex
+++ b/docs/spi_avalon_fpga/TeX_files/julia_lang.tex
@@ -35,4 +35,4 @@ This library was responsible for reading and writing ``Avalon Packets''.  This i
 	\caption{Project System:  Desktop -> USB-to-SPI -> FPGA -> VGA Monitor}
 \end{figure}
 
-The Julia code is located in the ``julia'' directory of the github repository linked in the introduction.
+The Julia code is located in the ``src'' directory of the github repository linked in the introduction.
