--- a/docs/spi_avalon_fpga/TeX_files/choosing_fpga.tex
+++ b/docs/spi_avalon_fpga/TeX_files/choosing_fpga.tex
@@ -31,7 +31,9 @@ My motivation for SystemVerilog was to try some of the new features, including t
 
 Looking around a bit more, I found this board after viewing Bruce Land's great lecture series on youtube:
 
+\begin{small}
 \url{https://www.terasic.com.tw/cgi-bin/page/archive.pl?Language=English&CategoryNo=165&No=836}
+\end{small}
 
 The DE1-SOC is used in Cornell's ``ECE 5760 Advanced Microcontroller Design and system-on-chip'' course.
 
@@ -39,7 +41,9 @@ The board requires the "Quartus" development tool, which met my requirement for 
 
 Fortunately the same company, Terasic, makes boards with less complex FPGAs (and less expensive).  Searching their site, I found this board, the DE10-Lite (\$85):
 
+\begin{footnotesize}
 \url{https://www.terasic.com.tw/cgi-bin/page/archive.pl?Language=English&CategoryNo=234&No=1021}
+\end{footnotesize}
 
 This looked like a good choice, and I purchased it.  Later when doing internet searches, I found there are plenty of example projects already available for this board.  It seems to be at moderately popular in the academic world, and some courses have been based on this board.  The MAX10 FPGA is well supported, although it is not included in the latest version of the Quartus development tool (latest version supported 2018).
 
