Minor updates to docs

--- a/docs/spi_avalon_fpga/TeX_files/conclusion.tex
+++ b/docs/spi_avalon_fpga/TeX_files/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Simulation}
 
-The FPGA developer should develop skills in FPGA simulation.  The original ``blinky LED'' project I attempted prior to the SPI bus project required me to do that.
+The FPGA developer should develop skills in FPGA simulation.  The ``blinky LED'' project I attempted prior to the SPI bus project required me to do that.
 I had a minor, but persistent bug which brought my work to a halt.  Trial and error with the board and re-doing the FPGA got me nowhere fast.  After I had a simple simulation running, the problem was quickly resolved.
 Fortunately the Quartus tool does most of the work to set up the simulation.  A small bit of hacking of ``do'' (TCL) files is required.
 
