--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 An FPGA project based on the Terasic DE10-Lite MAX10 Development board.
 The project uses an FTDI FT232H USB to SPI device to create a bi-directional
 interface to the FPGA from a desktop computer.
+
+doc/spi_avalon_fpga directory includes the PDF documentation file.
+src has the Julia code.
+fpga has a Quartus archive file for the MAX10 FPGA.
