Added TAPR presentation docs.

--- a/docs/spi_avalon_fpga/TeX_files/ftdi_julia.tex
+++ b/docs/spi_avalon_fpga/TeX_files/ftdi_julia.tex
@@ -1,4 +1,4 @@
-\section{A Project Inspiration: JTAG to FTDI SPI Interface}
+\section{A Project Inspiration: JTAG to DE10-Lite Interface}
 
 The inspiration for this project came from a a search at github.com on DE10-Lite:
 
