Mostly finished presentation.

--- a/docs/spi_avalon_fpga/TeX_files/ftdi_julia.tex
+++ b/docs/spi_avalon_fpga/TeX_files/ftdi_julia.tex
@@ -118,7 +118,7 @@ So that is what evolved into my ``introductory FPGA project''.  The revised syst
 
 The significant change on the FPGA is the swapping of the JTAG Avalon bus master with the SPI-Avalon slave.  This was not entirely a drop-in replacement, as there were changes to reset and clock connections in addition to swapping JTAG to SPI components.  But it is easy, and the swapping can be done in a couple of minutes.
 
-External to the DE10-Lite board, there is a USB to SPI adapter board.  This board is based on the FT232H chip by FTDI.  This can be bought from eBay for about \$10.  Search for ``ft232 spi'' and you will find several options.  I recommend one with headers to allow it to be plugged into a common breadboard.  The FTDI device requires a shared library (libMPSSE) to be installed:
+External to the DE10-Lite board, there is a USB to SPI adapter board.  This board is based on the FT232H chip by FTDI.  This can be bought from eBay for about \$10.  Search for ``ft232 spi'' and you will find several options.  I recommend one with headers to allow it to be plugged into a common breadboard.  The FTDI device requires a C shared library (libMPSSE) to be installed:
 
 \url{https://www.ftdichip.com/Support/SoftwareExamples/MPSSE/LibMPSSE-SPI.htm}
 
