File name change.

--- a/docs/tapr_presentation/tapr_presentation_fpga_kf5n.tex
+++ b/docs/tapr_presentation/tapr_presentation_fpga_kf5n.tex
@@ -10,7 +10,7 @@
 \title{An FPGA Learning Experience: SPI Interface to Max10 FPGA}
 \subtitle{ARRL and TAPR 38th Annual Digital Communications Conference}
 
-\author{Gregory Raven KF5N}
+\author{\texorpdfstring{Gregory Raven KF5N\newline\url{greg.electricity@gmail.com}}{Author}}
 \date{September 21 2019}
 \logo{\includegraphics[height=1.1cm]{./graphics/tapr-logo.png}}
 \begin{document}
@@ -118,7 +118,7 @@ This gives you the power to create multiple specifically targeted digital machin
 \begin{frame}
 \frametitle{How Do You Begin?}
 
-For FPGA this is not as clear as SBCs.  An SBC beginner I would say to get an Arduino UNO and a good book or website and get going.  Later graduate to embedded Linux and RPi, Beaglebone, or equivalent.
+For FPGA this is not as clear as SBCs.  To an SBC beginner I would say to get an Arduino UNO and a good book or website and get going.  Later graduate to embedded Linux and RPi, Beaglebone, or equivalent.
 
 So I will give an example here, not correct for everyone ...
 Lectures by Bruce Land of Cornell University using PIC32:
