--- a/docs/tapr_presentation/tapr_presentation_fpga_kf5n.tex
+++ b/docs/tapr_presentation/tapr_presentation_fpga_kf5n.tex
@@ -163,7 +163,7 @@ So far my experience with FPGA MOOCs is underwhelming.
 	\centering
 	\includegraphics[width=1.0\textwidth]{graphics/fpga_designer_in_4hours.png}
 	\centering\bfseries
-	\caption{Intel "Become and FPGA Designer in 4 Hours"}
+	\caption{Intel "Become an FPGA Designer in 4 Hours"}
 \end{figure}
 
 \end{frame}
@@ -189,7 +189,7 @@ The same company making the DE1-SOC also makes others:
 \begin{frame}
 \frametitle{What I Selected}
 
-Terasic DE10-Lite is a cost-effective Altera MAX 10 based FPGA board. The board utilizes the maximum capacity MAX 10 FPGA, which has around 50K logic elements(LEs) and on-die analog-to-digital converter (ADC). It features on-board USB-Blaster, SDRAM, accelerometer, VGA output, 2x20 GPIO expansion connector, and an Arduino UNO R3 expansion connector in a compact size. The kit provides the perfect system-level prototyping solution for industrial, automotive, consumer, and many other market applications.
+Terasic DE10-Lite is a cost-effective Altera MAX 10 based FPGA board. The board utilizes the maximum capacity MAX 10 FPGA, which has around 50K logic elements(LEs) and on-die analog-to-digital converter (ADC). It features on-board USB-Blaster, SDRAM, accelerometer, VGA output, 2x20 GPIO expansion connector, and an Arduino UNO R3 expansion connector in a compact size.
 
 The DE10-Lite kit also contains lots of reference designs and software utilities for users to easily develop their applications based on these design resources.
 
@@ -238,9 +238,7 @@ Quartus has a version for Windows, however, I have not tested it.
 
 Regarding Ubuntu, I don't recommend running Quartus in Ubuntu directly.  The simulation tool, Vsim, will not run.
 
-Instead, use a Virtual Box to create a ``virtual machine''.  I experimented with Centos 6 and 7.  Centos 6 was the easiest to configure.  Even so, there were a couple of tricks to get everything working smoothly.
-
-If you go the route of a virtual machine, you will need to work out permissions with USB devices, as the DE10-Lite uses the so-called ``USB Blaster'' mechanism for programming.
+Instead, use a Virtual Box to create a ``virtual machine''.  I experimented with Centos 6 and 7.  Centos 6 was the easiest to configure.
 
 Quartus is a significant user of desktop real estate.  I don't think anything less than full HD (1920x1080) is going to be satisfactory.  I found FHD to be marginal, and I bought a new 27 inch ``QHD'' display, which is 2560x1440 pixels.  Much better!
 
@@ -256,12 +254,9 @@ After a bunch of searching, I found this:
 \url{https://github.com/hildebrandmw/de10lite-hdl}
 
 The interesting feature of this project is the usage of the USB to load data (animated GIF image file) to
-the FPGA. So this is a data pipeline from a Linux desktop to the FPGA which is built into the board! This
-met my requirement that I be able to control the FPGA remotely from a desktop (or SBC) computer.
+the FPGA. So this is a data pipeline from a Linux desktop to the FPGA which is built into the board!
 The interface is via “JTAG”, which is typically used as a debugging interface. It is not specifically intended
 for mass data transfer, but in this case it was pressed into service.
-The interface is a bit clunky to use. It requires a “TCL Server”, and a running instance of the Quartus
-development tool!
 
 \end{frame}
 
@@ -284,7 +279,8 @@ Not shown is a running instance of Quartus and TCL/JTAG server required to make 
 
 FPGA Jargon:  ``Intellectual Property'' or ``IP''
 
-First, a little bit of FPGA jargon.  ``Intellectual Property'' (IP) in the context of semiconductor devices is a block of circuitry which has been heavily engineered and refined to perform some particular function.  It could be patented or otherwise protected from duplication by competitors.
+``Intellectual Property'' (IP) in the context of semiconductor devices is a block of circuitry which has been heavily engineered and refined to perform some particular function.
+
 Due to the way integrated circuits are manufactured, blocks of ''IP'' can be added to the silicon and be expected to perform to the IP owner's specifications.  Typically IP can be included as part of a design kit, or it can be paid for with a license fee.
 
 IP is good because it can reduce engineering design effort, improve performance, and enhance quality.  The trade-off is license fee cost, and you don't necessarily get exactly what you want.
